--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "github-embedder",
+  "name": "markdown-embedder",
   "version": "1.0.0",
   "description": "",
-  "main": "src/git-embedder.js",
+  "main": "src/markdown-embedder.js",
   "directories": {
     "example": "example"
   },
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ramutdotnet/github-embedder.git"
+    "url": "git+https://github.com/ramutdotnet/markdown-embedder.git"
   },
   "author": "Nakorn Sinpadung",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ramutdotnet/github-embedder/issues"
+    "url": "https://github.com/ramutdotnet/markdown-embedder/issues"
   },
-  "homepage": "https://github.com/ramutdotnet/github-embedder#readme",
+  "homepage": "https://github.com/ramutdotnet/markdown-embedder#readme",
   "dependencies": {
     "axios": "^0.18.0",
     "showdown": "^1.8.6"
@@ -28,6 +28,7 @@
   "devDependencies": {
     "css-loader": "^0.28.10",
     "style-loader": "^0.20.2",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^4.0.0",
     "webpack-cli": "^2.0.9"
   }
